syntax = "proto3";

package com.example.common.grpc;

option java_multiple_files = true;
option java_package = "com.example.common.grpc";

enum MessageSender {
  USER = 0;
  BOT = 1;
}

message GetMessagesRequest {
  string chat_id = 1;
  int32 max_results = 2;
}

message MessagesResponse {
  repeated Message messages = 1;
}

message Message {
  string id = 1;
  string content = 2;
  MessageSender sender = 3;
}

service ChatService {
  rpc GetChatHistory (GetMessagesRequest) returns (MessagesResponse) {}
}